@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-25T00:43:43Z",
-  "count_outdated" : 1273,
-  "uniques_outdated" : 682,
-  "count" : 1299,
-  "uniques" : 698,
+  "timestamp" : "2023-07-25T08:09:37Z",
+  "count_outdated" : 1276,
+  "uniques_outdated" : 684,
+  "count" : 1301,
+  "uniques" : 700,
   "clones" : [
-    {
-      "timestamp": "2023-07-11T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-07-12T00:00:00Z",
       "count": 2,
@@ -130,6 +121,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-25T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
