@@ -1,12 +1,7 @@
 {
-  "count": 26,
+  "count": 25,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-07-11T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-07-12T00:00:00Z",
       "count": 2,
@@ -71,6 +66,11 @@
       "timestamp": "2023-07-24T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-25T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
